fix jumbotron image too large

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -91,7 +91,9 @@ nav li:last-child{
   justify-content: flex-start;
 }
 .j-img img{
-  height: auto;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   margin: 2rem 1.5rem;
 }
 
